Footer link and code scrollbar fixes

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -28,3 +28,12 @@ body {
 .monospace {
   font-family: "ocr-a-std", monospace;
 }
+
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-none {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
